# vrac2

./: .gitignore  .gitmodules  Cargo.toml  README.md  mk-test-data.sh
migrations/: 20221013175019_token.up.sql  20221227085447_file.down.sql  20221227085447_file.up.sql  20230510132835_account.down.sql  20230629160059_backend_type.down.sql  20230629160059_backend_type.up.sql  20231023201500_blob_metadata.down.sql  20231023201500_blob_metadata.up.sql
src/: app.rs  auth.rs  cleanup.rs  db.rs  error.rs  filters.rs  lib.rs  state.rs  upload.rs
src/handlers/: file.rs  flash_utils.rs  gen.rs  mod.rs  upload.rs
static/: styles.css  upload.js
templates/: base.html  get_files.html  get_gen_token.html  macros.html  no_link_found.html  upload_form.html
vrac-server/: Cargo.toml
vrac-server/migrations/: 20221013175019_token.down.sql  20230510132835_account.up.sql
vrac-server/src/: db.rs  lib.rs
vrac-server/src/handlers/: upload.rs
