[package]
name = "vrac"
version = "0.1.0"
edition = "2021"
description = "Simple webserver to upload and share files without accounts"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.60"
async_zip = { version = "0.0.15", features = ["tokio-fs", "deflate"] }
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
axum = { version = "0.6.6", features = ["form", "multipart", "original-uri"] }
axum-auth = "0.4.0"
axum-flash = "0.6.0"
base64 = "0.21.0"
byte-unit = { version = "4.0.19", default-features = false, features = ["alloc", "std"] }
bytes = "1.4.0"
clap = { version = "4.2.7", features = ["derive"] }
futures = "0.3.25"
futures-util = "0.3.25"
humantime = "2.1.0"
hyper = { version = "0.14.20", features = ["client"] }
hyper-tls = "0.5.0"
mpart-async = "0.6.1"
ouroboros = "0.15.6"
parking_lot = "0.12.1"
password-hash = "0.5.0"
pin-project = "1.0.12"
rpassword = "7.2.0"
scrypt = "0.11.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "sqlite", "time"] }
tera = { version = "1.17.1", features = ["builtins"] }
thiserror = "1.0.37"
time = { version = "0.3.15", features = ["macros"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["io", "compat"] }
tower = "0.4.12"
tower-http = { version="0.3.4", features = ["trace", "fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url = "2.3.1"
urlencoding = "2.1.2"


[[bin]]
name = "split"
path = "src/bin/split.rs"

[[bin]]
name = "vracadmin"
path = "src/bin/admin.rs"

[[bin]]
name = "vrac"
path = "src/bin/vrac.rs"

[[bin]]
name = "test"
path = "src/bin/test.rs"

[[bin]]
name = "fill-metadata"
path = "src/bin/fill_metadata.rs"
