[package]
name = "vrac"
version = "0.1.0"
edition = "2021"
description = "Simple webserver to upload and share files without accounts"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
async_zip = { version = "0.0.15", features = ["tokio-fs", "deflate"] }
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
axum = { version = "0.6.20", features = ["form", "multipart", "original-uri"] }
axum-auth = "0.4.1"
axum-flash = "0.6.0"
base64 = "0.21.5"
byte-unit = { version = "4.0.19", default-features = false, features = ["alloc", "std"] }
bytes = "1.5.0"
clap = { version = "4.4.7", features = ["derive"] }
futures = "0.3.29"
futures-util = "0.3.29"
humantime = "2.1.0"
hyper = { version = "0.14.27", features = ["client"] }
hyper-tls = "0.5.0"
mpart-async = "0.6.1"
ouroboros = "0.15.6"
parking_lot = "0.12.1"
password-hash = "0.5.0"
pin-project = "1.1.3"
rpassword = "7.2.0"
scrypt = "0.11.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "sqlite", "time"] }
tera = { version = "1.19.1", features = ["builtins"] }
thiserror = "1.0.50"
time = { version = "0.3.30", features = ["macros"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io", "compat"] }
tower = "0.4.13"
tower-http = { version="0.3.5", features = ["trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.1"
urlencoding = "2.1.3"


[[bin]]
name = "split"
path = "src/bin/split.rs"

[[bin]]
name = "vracadmin"
path = "src/bin/admin.rs"

[[bin]]
name = "vrac"
path = "src/bin/vrac.rs"

[[bin]]
name = "test"
path = "src/bin/test.rs"

[[bin]]
name = "fill-metadata"
path = "src/bin/fill_metadata.rs"
